Load missing styled component, fix spacing in code blocks

--- a/src/styles/plugins/_prism.scss
+++ b/src/styles/plugins/_prism.scss
@@ -6,7 +6,7 @@ pre[class*="language-"] {
   margin: 0;
   margin-bottom: 2.4rem;
   @include _monospace;
-  padding: 1rem 0.6rem;
+  padding: 0.9rem 1rem;
   width: 100%;
   overflow-x: auto;
   position: relative;
